app1/app1ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1
spec:
  ingressClassName: nginx
  rules:
  - host: app1.kevinsha007.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
